--- a/web/index.html
+++ b/web/index.html
@@ -1,68 +1,104 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <base href="$FLUTTER_BASE_HREF">
-
-    <meta charset="UTF-8">
-    <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-    <meta name="description" content="Nazar Lenyk site">
-    <meta name="google-signin-client_id content="648403634176-6pl3j3ru1cq17akhifdhudjq29c7ripl.apps.googleusercontent.com">
-    <!-- iOS meta tags & icons -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="onelenyk.dev">
-
-    <link rel="apple-touch-icon" href="icons/apple-icon.png">
-    <link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="icons/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="icons/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="icons/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="icons/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="icons/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="icons/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="icons/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="icons/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
-
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="icons/favicon.ico" type="image/x-icon">
-
+    <base href="$FLUTTER_BASE_HREF" />
+    <meta charset="UTF-8" />
+    <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
+    <meta content="Nazar Lenyk site" name="description" />
+    <meta content="648403634176-6pl3j3ru1cq17akhifdhudjq29c7ripl.apps.googleusercontent.com" name="google-signin-client_id" />
+    <meta content="yes" name="apple-mobile-web-app-capable" />
+    <meta content="black" name="apple-mobile-web-app-status-bar-style" />
+    <meta content="onelenyk.dev" name="apple-mobile-web-app-title" />
+    <link href="icons/apple-icon.png" rel="apple-touch-icon" />
+    <link href="icons/apple-icon-57x57.png" rel="apple-touch-icon" sizes="57x57" />
+    <link href="icons/apple-icon-60x60.png" rel="apple-touch-icon" sizes="60x60" />
+    <link href="icons/apple-icon-72x72.png" rel="apple-touch-icon" sizes="72x72" />
+    <link href="icons/apple-icon-76x76.png" rel="apple-touch-icon" sizes="76x76" />
+    <link href="icons/apple-icon-114x114.png" rel="apple-touch-icon" sizes="114x114" />
+    <link href="icons/apple-icon-120x120.png" rel="apple-touch-icon" sizes="120x120" />
+    <link href="icons/apple-icon-144x144.png" rel="apple-touch-icon" sizes="144x144" />
+    <link href="icons/apple-icon-152x152.png" rel="apple-touch-icon" sizes="152x152" />
+    <link href="icons/apple-icon-180x180.png" rel="apple-touch-icon" sizes="180x180" />
+    <link href="icons/android-icon-192x192.png" rel="icon" sizes="192x192" type="image/png" />
+    <link href="icons/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png" />
+    <link href="icons/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png" />
+    <link href="icons/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png" />
+    <meta content="#ffffff" name="msapplication-TileColor" />
+    <meta content="icons/ms-icon-144x144.png" name="msapplication-TileImage" />
+    <meta content="#ffffff" name="theme-color" />
     <title>onelenyk.dev</title>
-    <link rel="manifest" href="manifest.json">
-
+    <link href="manifest.json" rel="manifest" />
     <script>
-    // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = null;
-
+        // The value below is injected by flutter build, do not touch.
+        var serviceWorkerVersion = null;
     </script>
-    <!-- This script adds the flutter initialization JS code -->
-    <script src="flutter.js" defer></script>
+    <script defer src="flutter.js"></script>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+        #loading {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            background-color: #34353f;
+        }
+        .emoji {
+            font-size: 6rem;
+            animation: 2s ease 0s infinite beat;
+        }
+        @keyframes beat {
+            0%,
+            50%,
+            100% {
+                transform: scale(1.4, 1.4);
+            }
+            30%,
+            80% {
+                transform: scale(1, 1);
+            }
+        }
+    </style>
 </head>
 <body>
+<div class="loading" id="loading">
+    <div class="emoji">👾</div>
+</div>
 <script>
-window.addEventListener('load', function(ev) {
-  // Download main.dart.js
-  _flutter.loader.loadEntrypoint({
-    serviceWorker: {
-      serviceWorkerVersion: serviceWorkerVersion,
-    },
-    onEntrypointLoaded: function(engineInitializer) {
-      engineInitializer.initializeEngine({
-        useColorEmoji: true,
-      }).then(function(appRunner) {
-        appRunner.runApp();
-      });
-    }
-  });
-});
+    window.addEventListener("load", function () {
+        var loading = document.getElementById("loading");
+        _flutter.loader
+            .loadEntrypoint({
+                serviceWorker: {
+                    serviceWorkerVersion: serviceWorkerVersion,
+                },
+                onEntrypointLoaded: function (engineInitializer) {
+                    engineInitializer
+                        .initializeEngine({
+                            useColorEmoji: true,
+                        })
+                        .then(function (appRunner) {
+                            appRunner.runApp();
+                        });
+                },
+            })
+            .then(function (engineInitializer) {
+                return engineInitializer.initializeEngine();
+            })
+            .then(function (appRunner) {
+                return appRunner.runApp();
+            })
+            .then(function () {
+                // Adjust timing as needed
+                window.setTimeout(function () {
+                    loading.remove();
+                }, 200);
+            });
+    });
 </script>
 </body>
 </html>
